--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ts-node": "ts-node --compiler-options {\\\"module\\\":\\\"commonjs\\\"}"
   },
   "dependencies": {
+    "@devoxa/prisma-relay-cursor-connection": "^2.0.2",
     "@nestjs/common": "^7.6.17",
     "@nestjs/core": "^7.6.17",
     "@nestjs/platform-express": "^7.6.17",
